force-app/main/default/objects/Share_Relation_Object__c/fields/Object_Lookup_Detail_API__c.field-meta.xml
<CustomField>
    <fullName>Object_Lookup_Detail_API__c</fullName>
    <inlineHelpText>设置为共享对象LookUp的字段子级关系名称API名称, 自定义字段以__r后缀</inlineHelpText>
    <label>共享对象子级关系API</label>
    <length>255</length>
    <type>Text</type>
</CustomField>