force-app/main/default/objects/Share_Relation_Object__c/fields/Object_Share__c.field-meta.xml
<CustomField>
    <fullName>Object_Share__c</fullName>
    <label>共享关系对象_ShareAPI</label>
    <length>255</length>
    <type>Text</type>
</CustomField>