force-app/main/default/objects/Share_Relation_Object__c/fields/Relation_Object_API__c.field-meta.xml
<CustomField>
    <fullName>Relation_Object_API__c</fullName>
    <inlineHelpText>设置为共享对象LookUp的主表对象名称, 自定义字段以__c后缀</inlineHelpText>
    <label>共享关系对象API</label>
    <length>255</length>
    <type>Text</type>
</CustomField>