force-app/main/default/objects/Share_Relation_Object__c/fields/Share_Object__c.field-meta.xml
<CustomField>
    <fullName>Share_Object__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>共享对象</label>
    <referenceTo>Share_Object__c</referenceTo>
    <relationshipLabel>共享关系对象</relationshipLabel>
    <relationshipName>Share_Object_Relation</relationshipName>
    <type>Lookup</type>
</CustomField>