force-app/main/default/objects/Share_Relation_Object__c/fields/Share_RowCause__c.field-meta.xml
<CustomField>
    <fullName>Share_RowCause__c</fullName>
    <label>共享原因</label>
    <length>255</length>
    <type>Text</type>
</CustomField>